<resources>
    <string name="app_name">FoodReminderApp</string>

    <string name="mainScreenTitle">Alle Lebensmittel</string>

    <!-- Strings for bottom navigation -->
    <string name="BottomNavHome">Übersicht</string>
    <string name="BottomNavHasToGo">Muss weg</string>
    <string name="BottomNavShoppingList">Einkaufszettel</string>
    <string name="BottomNavStatistics">Statistiken</string>

    <!-- Strings for main activity -->
    <string name="itemDaysLeft">%1$s Tage</string>

    <!-- Strings for choosing list -->
    <string name="chooseListAllItems">Alle Lebensmittel</string>
    <string name="chooseListFridge">Kühlschrank</string>
    <string name="chooseListFreezer">Tiefkühltruhe</string>
    <string name="chooseListShelf">Regal</string>
    <string name="chooseListAddItem">Hinzufügen</string>

    <!-- Strings for hasToGo Fragment -->
    <string name="HasToGoTitle">Muss bald weg</string>
    <string name="hasToGoFridge">Kühlschrank</string>
    <string name="hasToGoShelf">Regal</string>
    <string name="hasToGoFreezer">Tiefkühltruhe</string>

    <!-- Strings for creating or editing an item -->
    <string name="createEditName">Name des Lebensmittels (bspw. Banane)</string>
    <string name="createEditDaysLeft">Haltbarkeit in Tagen (bspw. 3)</string>
    <string name="createEditLocation">Aufbewahrungsort</string>
    <string name="createEditSave">Speichern</string>
    <string name="createEditTitle">Lebensmittel erstellen oder ändern</string>
    <string name="createEditRegal">Regal</string>
    <string name="createEditTiefkuehlschrank">Tiefkühltruhe</string>
    <string name="createEditKuehlschrank">Kühlschrank</string>
    <string name="createEditAmount">Menge</string>
    <string name="createEditAmount1">1</string>
    <string name="createEditAmount2">2</string>
    <string name="createEditAmount5">5</string>
    <string name="createEditAmount10">10</string>
    <string name="createEditAmountElse">Andere Menge</string>


    <!-- Strings for delete action -->
    <string name="itemDeleteTitle">Item löschen</string>
    <string name="itemDeleteThrowAwayConfirm">Item wegwerfen?</string>
    <string name="itemDeleteYes">Ja</string>
    <string name="itemDeleteNo">Nein</string>

    <!-- Strings for item detail fragment -->
    <string name="itemDetailsTitle">Details</string>
    <string name="itemDetailsName">Name des Items</string>
    <string name="itemDetailsDaysLeftDate">Haltbar bis %1$s</string>
    <string name="itemDetailsDaysLeftInDays">(noch %1$s Tage)</string>
    <string name="itemDetailsLocation">Kühlschrank</string>
    <string name="itemDetailsEaten">Aufgegessen</string>
    <string name="itemDetailsThrownAway">Weggeworfen</string>
    <string name="itemDetailsOneEaten">Eins aufgegessen</string>
    <string name="itemDetailsOneThrownAway">Eins weggeworfen</string>
    <string name="itemDetailsEdit">Bearbeiten</string>

    <!-- Strings for choose new item fragment -->
    <string name="chooseNewItem">Neues Item erstellen</string>
    <string name="chooseNewQueryHint">vorhandene durchsuchen</string>
    <string name="chooseNewAddSelected">Ausgewählte übernehmen</string>
    <string name="chooseNewOr">oder</string>

    <!-- Strings for statistics fragment -->
    <string name="statisticsTitle">Statistiken</string>
    <string name="statisticsChooseWeek">Woche</string>
    <string name="statisticsChooseMonth">Monat</string>
    <string name="statisticsChooseYear">Jahr</string>
    <string name="statisticsChooseAll">Alles</string>
    <string name="statisticsThrownAway">weggeworfen</string>
    <string name="statisticsEaten">gegessen</string>
    <string name="statisticsPercentageThrownAway">weggeworfen</string>
    <string name="statisticsOverviewTitle">Übersicht</string>
    <string name="statisticsMostThrownAwayTitle">Am häufigsten weggeworfen</string>
    <string name="statisticsAllItemsTitle">Alle Lebensmittel</string>

    <!-- Strings for statistics detail fragment -->
    <string name="statisticsDetailsThrownAway">Wenn du das Lebensmittel weggeworfen hast, ist das meist nach %1$d Tagen passiert. Vielleicht solltest du versuchen, das Lebensmittel innerhalb dieser Zeit zu essen.</string>
    <string name="statisticsDetailsEaten">Du hast das Lebensmittel im Schnitt nach %1$d Tagen gegessen. Gut so!</string>

    <!-- Strings for content descriptions -->
    <string name="contentDescriptionAddItem">Item hinzufügen</string>
    <string name="contentDescriptionEdit">Item bearbeiten</string>
    <string name="contentDescriptionDelete">Item löschen</string>
    <string name="contentDescriptionCalendar">Wie viele Tage ist Artikel noch haltbar?</string>

</resources>