<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateEditItemFragment"
    android:layout_margin="15dp">


    <Button
        android:id="@+id/btnSaveFoodItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/createEditSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createEditItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="200dp"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createEditItemName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createEditName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createEditDaysLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/createEditItemName"
        app:layout_constraintStart_toStartOf="@id/createEditItemName"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createEditDaysLeft_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createEditDaysLeft"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createEditLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/createEditDaysLeft"
        app:layout_constraintStart_toStartOf="@id/createEditDaysLeft"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createEditLocation_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createEditLocation"
            />

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>