<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".fragments.FoodItemListFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/items_fridge_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/secondary"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_newItem"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cornerRadius="100dp"
                android:backgroundTint="@color/primary"
                android:text="@string/chooseNewItem"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseNewOr"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_newItem" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_background"
                app:iconifiedByDefault="false"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:queryHint="@string/chooseNewQueryHint" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDatabaseItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/database_item"
                app:layout_constraintTop_toBottomOf="@id/search_items"
                app:layout_constraintBottom_toTopOf="@id/btn_addSelected"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addSelected"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/rvDatabaseItems"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cornerRadius="100dp"
                android:backgroundTint="@color/primary"
                android:text="@string/chooseNewAddSelected"
                android:textAlignment="center"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>