<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:padding="5dp"
    tools:context=".fragments.ChooseNewFragment">

<com.google.android.material.card.MaterialCardView
    android:id="@+id/items_fridge_card"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:cardCornerRadius="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/secondary"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/radioGroupCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/secondary"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <RadioGroup
                    android:id="@+id/time_interval"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@id/option_week"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/option_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statisticsChooseWeek"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <!--            android:button="@null"-->

                    <RadioButton
                        android:id="@+id/option_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statisticsChooseMonth"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/option_year"
                        app:layout_constraintStart_toEndOf="@id/option_week"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/option_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statisticsChooseYear"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/option_all"
                        app:layout_constraintStart_toEndOf="@id/option_month"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/option_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statisticsChooseAll"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/search_background"
            app:iconifiedByDefault="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCard"
            app:queryHint="@string/chooseNewQueryHint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStatisticsItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/statistics_item"
            app:layout_constraintTop_toBottomOf="@id/search_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>