<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ItemDetailFragment"
    android:layout_margin="15dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/iv_fridge"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        android:layout_marginTop="30dp"
        app:cornerRadius="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary_variant_dark"
        android:text="@string/itemDetailsEdit"
        />

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_edit_item"
        app:layout_constraintTop_toTopOf="@id/btn_edit"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit"
        app:layout_constraintStart_toStartOf="@id/btn_edit"
        android:layout_marginStart="10dp"
        android:translationZ="90dp"
        app:tint="@color/white" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_thrown_away"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/iv_fridge"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"
        android:layout_marginTop="10dp"
        app:cornerRadius="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary_variant_dark"
        android:text="@string/itemDetailsThrownAway"
        />

    <ImageView
        android:id="@+id/iv_thrown_away"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_delete_item"
        app:layout_constraintTop_toTopOf="@id/btn_thrown_away"
        app:layout_constraintBottom_toBottomOf="@id/btn_thrown_away"
        app:layout_constraintStart_toStartOf="@id/btn_thrown_away"
        android:layout_marginStart="10dp"
        android:translationZ="90dp"
        app:tint="@color/white" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_eaten"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/iv_fridge"
        app:layout_constraintTop_toBottomOf="@id/btn_thrown_away"
        android:layout_marginTop="10dp"
        app:cornerRadius="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/primary"
        android:text="@string/itemDetailsItemEaten"
        />

    <ImageView
        android:id="@+id/iv_eaten"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_item_eaten_not_filled"
        app:layout_constraintTop_toTopOf="@id/btn_eaten"
        app:layout_constraintBottom_toBottomOf="@id/btn_eaten"
        app:layout_constraintStart_toStartOf="@id/btn_eaten"
        android:layout_marginStart="10dp"
        android:translationZ="90dp"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceHeadline4"
        tools:text="Banane" />

    <TextView
        android:id="@+id/tv_days_left_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_calendar"
        app:layout_constraintTop_toTopOf="@id/iv_calendar"
        app:layout_constraintBottom_toBottomOf="@id/iv_calendar"
        android:text="@string/itemDetailsDaysLeftDate"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/tv_days_left_in_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_calendar"
        app:layout_constraintTop_toBottomOf="@id/tv_days_left_date"
        android:text="@string/itemDetailsDaysLeftInDays"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_fridge"
        app:layout_constraintTop_toTopOf="@id/iv_fridge"
        app:layout_constraintBottom_toBottomOf="@id/iv_fridge"
        android:text="@string/createEditLocation"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        />


    <ImageView
        android:id="@+id/iv_fridge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_fridge"
        app:layout_constraintStart_toStartOf="@id/iv_calendar"
        app:layout_constraintTop_toBottomOf="@id/tv_days_left_in_days"
        app:tint="@color/primary_variant_dark"
        />

    <ImageView
        android:id="@+id/iv_calendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_calendar_item"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:tint="@color/primary_variant_dark"
        />

    <ImageView
        android:id="@+id/iv_ramen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_food_name"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:layout_constraintStart_toEndOf="@id/tv_item_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"
        app:tint="@color/primary_variant_dark"
        />


</androidx.constraintlayout.widget.ConstraintLayout>